--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
 						projects. Unrelated fact, I play basketball. </p>
 					<p>My tech stacks: HTML5, CSS, SASS, JavaScript, TypeScript, Material-UI, ReactJs, NodeJs, MongoDB,
 						SQL </p>
+					<div class="skill-icons">
+						<span class="icon brands fa-html5"></span>
+						<span class="icon brands fa-css3"></span>
+						<span class="icon brands fa-sass"></span>
+						<span class="icon brands fa-js-square"></span>
+						<span class="icon brands fa-node-js"></span>
+					</div>
 				</header>
 				<div class="image main"></a><img src="images/header-img.jpg" alt="" /></div>
 				<ul class="actions special">
@@ -174,7 +181,7 @@
 			<section class="split contact">
 				<section class="alt">
 					<h3>Address</h3>
-					<p>Servin Maijan tie 6E<br />
+					<p>Jaakkimantie 24<br />
 						Espoo, 02150 Finland</p>
 				</section>
 				<section>
